fix: z-index issues with dropdowns on both GA and LDA

--- a/packages/fe/assets/scss/main.scss
+++ b/packages/fe/assets/scss/main.scss
@@ -501,6 +501,11 @@ span.error {
   z-index: 100;
 }
 
+.z-index-50 {
+  position: relative;
+  z-index: 50;
+}
+
 // ///////////////////////////////////////////////// Markdown content formatting
 //------------------------------------------------------------------------------
 @keyframes shrink-bounce {
